# huangmei

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
.github/workflows/: build.yml
build-aux/: config.mk  install-toolchain.sh
kernel/: CMakeLists.txt  Makefile  linker.ld
kernel/include/: gdt.h  idt.h  irq.h  isr.h  log.h  port.h  terminal.h
kernel/src/: kernel.c  log.c  terminal.c
kernel/src/arch/i686/: gdt.S  gdt.c  idt.S  idt.c  interrupt.S  irq.c  isr.c  start.S
meta/boot/grub/: grub.cfg
